update ownerOrTitle param on GetDocs methods
