# internal/http/handler/document.go
@@ -18,18 +18,16 @@ import (
 // @Produce json
 // @Param page query int false "Номер страницы" default(1)
 // @Param pageSize query int false "Размер страницы" default(10)
-// @Param owner query string false "Название"
-// @Param title query string false "Имя отправителя"
+// @Param ownerOrTitle query string false "Отправитель или Название"
 // @Success 200 {array} model.GetDocuments "Успешный ответ"
 // @Failure 500 {object} model.ErrorResponse "Внутренняя ошибка сервера"
 // @Router /document/draft [get]
 func (h *Handler) GetDraftDocuments(c *gin.Context) {
     page, _ := strconv.Atoi(c.Query("page"))
     pageSize, _ := strconv.Atoi(c.Query("pageSize"))
-	owner := c.Query("owner")
-	title := c.Query("title")
+	ownerOrTitle := c.Query("ownerOrTitle")
     // Получаем черновики документов
-    documents, total, err := h.r.GetDraftDocuments(page, pageSize, owner, title)
+    documents, total, err := h.r.GetDraftDocuments(page, pageSize, ownerOrTitle)
     if err != nil {
         c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to retrieve documents: " + err.Error()})
         return
@@ -48,8 +46,7 @@ func (h *Handler) GetDraftDocuments(c *gin.Context) {
 // @Param page query int false "Номер страницы" default(1)
 // @Param pageSize query int false "Размер страницы" default(10)
 // @Param deliveryStatus query string false "Статус доставки" default(PENDING)
-// @Param owner query string false "Название" 
-// @Param title query string false "Имя отправителя"
+// @Param ownerOrTitle query string false "Отправитель или Название"
 // @Success 200 {array} model.GetDocuments "Успешный ответ"
 // @Failure 500 {object} model.ErrorResponse "Внутренняя ошибка сервера"
 // @Router /document/formed [get]
@@ -58,10 +55,9 @@ func (h *Handler) GetFormedDocuments(c *gin.Context) {
     page, _ := strconv.Atoi(c.Query("page"))
     pageSize, _ := strconv.Atoi(c.Query("pageSize"))
 	deliveryStatus := model.DeliveryStatus(c.Query("deliveryStatus"))
-	owner := c.Query("owner")
-	title := c.Query("title")
+	ownerOrTitle := c.Query("ownerOrTitle")
     // Получаем сформированные документы
-    documents, total, err := h.r.GetFormedDocuments(page, pageSize, deliveryStatus, owner, title)
+    documents, total, err := h.r.GetFormedDocuments(page, pageSize, deliveryStatus, ownerOrTitle)
     if err != nil {
         c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to retrieve documents: " + err.Error()})
         return
